--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@ html {
     font-family: 'Lato', sans-serif;
     box-sizing: border-box;
     margin: 0 auto;
-    max-width: 960px;
     padding: 20px;
     text-align: justify;
     line-height: 1.5;
+    background-image: url("../img/background.jpg");
+    background-size: 100%;
 }
 
 *,
